--- a/async-race/package.json
+++ b/async-race/package.json
@@ -79,6 +79,7 @@
     "body-parser": "^1.19.0",
     "bonjour": "^3.5.0",
     "boolbase": "^1.0.0",
+    "bootstrap": "^5.2.2",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
     "browserslist": "^4.17.4",
@@ -461,10 +462,10 @@
     "sprintf-js": "^1.0.3",
     "static-extend": "^0.1.2",
     "statuses": "^1.5.0",
+    "string_decoder": "^1.1.1",
     "string-width": "^4.2.3",
     "string.prototype.trimend": "^1.0.4",
     "string.prototype.trimstart": "^1.0.4",
-    "string_decoder": "^1.1.1",
     "strip-ansi": "^6.0.1",
     "strip-bom": "^3.0.0",
     "strip-eof": "^1.0.0",
